# mathilde-binary-transport

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  inventory.md  release.toml
.github/workflows/: ci.yml
benches/: json_vs_mathldbt.rs  mathldbt_transport.rs
docs/: inventory.md  inventory_template.md
docs/evidence/: bench_results.md
src/: batch.rs  batch_view.rs  error.rs  lib.rs  schema.rs
src/codec/: exports.rs  mathldbt_v1.rs  mathldbt_v1_compressed.rs  mod.rs
src/docs/: inventory.md
src/tests/: mod.rs  test_batch.rs  test_mathldbt_v1.rs  test_mathldbt_v1_adversarial.rs  test_mathldbt_v1_compressed.rs  test_mathldbt_v1_decode_into_equivalence.rs  test_mathldbt_v1_decode_into_reuse_smoke.rs  test_mathldbt_v1_fast_path.rs
